# libgfbgraph

./: .dir-locals.el  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  libgfbgraph.doap  libgfbgraph.pc.in  meson.build
docs/reference/: Makefile.am  apiversion.xml.in  gfbgraph-docs.xml  gfbgraph-sections.txt  gfbgraph.types
gfbgraph/: Makefile.am  gfbgraph-album.c  gfbgraph-album.h  gfbgraph-authorizer.c  gfbgraph-authorizer.h  gfbgraph-common.c  gfbgraph-common.h  gfbgraph-connectable.c  gfbgraph-connectable.h  gfbgraph-goa-authorizer.c  gfbgraph-goa-authorizer.h  gfbgraph-node.c  gfbgraph-node.h  gfbgraph-photo.c  gfbgraph-photo.h  gfbgraph-simple-authorizer.c  gfbgraph-simple-authorizer.h  gfbgraph-user.c  gfbgraph-user.h  gfbgraph.h  meson.build
tests/: Makefile.am  README  autoptr.c  credentials.h  gfbgraph-simple-authorizer.c  gfbgraph-simple-authorizer.h  gtestutils.c  meson.build  test-async.c  test.c
